--- a/site/static/style.css
+++ b/site/static/style.css
@@ -7,6 +7,6 @@
 .output {
   resize: none;
   font-family: 'Courier New', Courier, monospace;
-  font-weight: bold;
-  line-height: 1.5em;
+  font-size: 1.5em;
+  line-height: 1em;
 }
