Handle canvas resize

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -17,7 +17,7 @@
 }
 .canvas {
   display: inline-block !important;
-  width: 50% !important;
+  width: 60%;
 }
 .instructions {
   display: inline-block !important;
