--- a/site/static/style.css
+++ b/site/static/style.css
@@ -25,3 +25,12 @@
   font-size: .8em;
   float: right;
 }
+
+.paletteCanvas {
+  display: inline-block !important;
+  width: 70%;
+}
+.editorCanvas {
+  display: inline-block !important;
+  width: 70%;
+}
