--- a/site/static/style.css
+++ b/site/static/style.css
@@ -22,8 +22,11 @@
 }
 @media only screen and (max-width: 768px) {
   .canvas {
-    display: inline-block !important;
     width: 100%;
+  }
+  .sourceCode {
+    resize: none;
+    width: 40ch;
   }
 }
 .paletteCanvas {
