--- a/site/static/style.css
+++ b/site/static/style.css
@@ -13,8 +13,7 @@
   padding: 0 1.4ch;
 }
 .message {
-  background-color: rgb(238, 238, 238);
-  color: black;
+  color: rgb(217, 114, 11);
   padding: .2em;
   margin: .2em;
   font-weight: bolder;
