--- a/site/static/style.css
+++ b/site/static/style.css
@@ -54,3 +54,22 @@
 .inline {
   display: inline;
 }
+
+/* Custom code editor */
+.codeText {
+  background-color: darkgray;
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
+  resize: none;
+  width: 100%;
+  font-weight: bold;
+  line-height: 1em;
+  min-height: 18em;
+  height: fit-content;
+  padding: .3em .3em;
+}
+
+.codeScroll {
+  overflow: scroll;
+  height: 16em;
+}
