--- a/site/static/style.css
+++ b/site/static/style.css
@@ -51,6 +51,15 @@
   line-height: 1em;
 }
 
+#codeContainer {
+  margin: .3em 0 .8em 0;
+}
+
+.debug-line {
+  background-color: rgb(181, 57, 0);
+  color: white;
+}
+
 .inline {
   display: inline;
 }
