--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="footer__inner">
       <div class="copyright">
-        <span>© {{ now.Year }} Leandro Fernandez [<a href="https://drkbbugs.com">drkbugs</a>]</span>
+        <span>© {{ now.Year }} Leandro Fernandez [<a href="https://drkbugs.com">drkbugs</a>]</span>
         <span>:: Theme made by <a href="https://twitter.com/panr">panr</a></span>
       </div>
   </div>
